[package]
name = "springtime_rs"
version = "0.1.0"
edition = "2021"
authors = ["Javier Orfo"]
license-file = "LICENSE"

[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { version = "0.4.2", features = [ "neovim-0-9", "mlua" ] }
curl = "0.4.46"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = [ "derive" ] }

